--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "react-native-qrcode-scanner": "^1.5.4",
     "react-native-web": "0.17.1",
     "react-redux": "^7.2.6",
-    "redux": "^4.1.2"
+    "redux": "^4.1.2",
+    "redux-persist": "^6.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
