--- a/app.json
+++ b/app.json
@@ -17,13 +17,15 @@
       "**/*"
     ],
     "ios": {
-      "supportsTablet": true
+      "supportsTablet": false
     },
     "android": {
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#FFFFFF"
-      }
+      },
+      "package": "app.yreelfactory.passneon.app",
+      "versionCode":1
     },
     "web": {
       "favicon": "./assets/favicon.png"
