--- a/package.json
+++ b/package.json
@@ -14,21 +14,27 @@
     "@react-navigation/drawer": "^6.1.8",
     "@react-navigation/native": "^6.0.6",
     "expo": "~43.0.2",
+    "expo-barcode-scanner": "^11.1.2",
+    "expo-camera": "^12.0.3",
     "expo-font": "^10.0.3",
     "expo-image-picker": "^11.0.3",
+    "expo-location": "^13.0.4",
+    "expo-permissions": "^13.0.3",
     "expo-status-bar": "~1.1.0",
     "native-base": "^3.2.2",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
-    "react-native-anchor-point": "^1.0.6",
-    "react-native-camera": "^4.2.1",
+    "react-native-camera": "^3.44.3",
     "react-native-customized-image-picker": "^1.2.2",
     "react-native-fs": "^1.2.0",
     "react-native-image-crop-picker": "^0.37.2",
     "react-native-image-picker": "^4.2.0",
     "react-native-paper": "^4.10.0",
+    "react-native-permissions": "^3.1.0",
     "react-native-qrcode-scanner": "^1.5.4",
+    "react-native-qrcode-scanner-view": "^2.0.0",
+    "react-native-qrcode-svg": "^6.1.1",
     "react-native-web": "0.17.1",
     "react-redux": "^7.2.6",
     "redux": "^4.1.2",
