--- a/app.json
+++ b/app.json
@@ -1,8 +1,8 @@
 {
   "expo": {
     "name": "pass NEON",
-    "slug": "passNEON",
-    "version": "1.0.4",
+    "slug": "pass-NEON",
+    "version": "1.0.5",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
     "splash": {
