--- a/app.json
+++ b/app.json
@@ -2,13 +2,13 @@
   "expo": {
     "name": "pass NEON",
     "slug": "pass-NEON",
-    "version": "1.1.2",
+    "version": "1.1.3",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
     "splash": {
       "image": "./assets/splash.png",
       "resizeMode": "contain",
-      "backgroundColor": "#ffffff"
+      "backgroundColor": "#FFFFFF"
     },
     "updates": {
       "fallbackToCacheTimeout": 0
@@ -25,7 +25,7 @@
         "backgroundColor": "#FFFFFF"
       },
       "package": "app.yreelfactory.passneon.app",
-      "versionCode":10
+      "versionCode":11
     },
     "web": {
       "favicon": "./assets/favicon.png"
