--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@react-navigation/drawer": "^6.1.8",
     "@react-navigation/native": "^6.0.6",
     "expo": "~43.0.2",
+    "expo-brightness": "^10.0.3",
     "expo-camera": "^12.0.3",
     "expo-font": "^10.0.3",
     "native-base": "^3.2.2",
